Added search bar and 5 cities to autocomplete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <header>
         <h1>This is the Title!</h1>
     </header>
-
+   <!--This is the search bar-->
+    <div class="ui-widget">
+        <label for="city">City you would like to Visit: </label>
+        <input id="city">
+      </div>
 
 
 
