Added search button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="ui-widget">
         <label for="city">City you would like to Visit: </label>
         <input id="city">
+        <button class="searchBtn">Search</button>
       </div>
 
 
