skeleton of html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
     <header>
         <h1>This is the Title!</h1>
     </header>
+
+    <!-- First section for holding the search bar-->
+    <section>
    <!--This is the search bar-->
     <div class="ui-widget">
         <label for="city">City you would like to Visit: </label>
         <input id="city">
         <button class="searchBtn">Search</button>
       </div>
+    </section>
+    <!-- Second Section for currency exchange display-->
+    <section>
 
+    </section>
+
+    <!-- Third Section for Weather Display-->
+    <section>
+        
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
