added temp borders for visualisation

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     </section>
     <!-- Second Section for currency exchange display-->
     <section>
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita omnis, voluptatibus, nemo optio iusto vero nisi officiis tenetur sequi quia eum ad pariatur dignissimos. Ipsam consequatur dolor provident minus beatae?
     </section>
 
     <!-- Third Section for Weather Display-->
     <section>
-        
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut voluptatum fugit perferendis. Possimus quod eum repellendus enim blanditiis placeat numquam laboriosam sint nisi ad, pariatur hic, commodi id assumenda.
     </section>
 
 
