Added colour and text to header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     
 </head>
 <body>
-    <header>
-        <h1>This is the Title!</h1>
+    <header class="has-background-info-dark">
+        <h1 class="has-text-centered title is-1 has-text-success-light">The Snowbird Exchange:</h1>
+        <h2 class="has-text-centered subtitle is-2 has-text-success-light">Plan Your Winter Getaway Today</h2>
     </header>
 
     <!-- First section for holding the search bar-->
