--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>The Snowbird Exchange - Escape south from Canada</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    
+
 </head>
+
 <body>
     <header class="has-background-info-dark">
         <h1 class="has-text-centered title is-1 has-text-success-light">The Snowbird Exchange:</h1>
@@ -17,26 +19,31 @@
 
     <!-- First section for holding the search bar-->
     <section>
-   <!--This is the search bar-->
-    <div class="ui-widget">
-        <label for="city">City you would like to Visit: </label>
-        <input id="city">
-        <button class="searchBtn">Search</button>
-      </div>
+        <!--This is the search bar-->
+        <div class="ui-widget">
+            <label for="city">City you would like to Visit: </label>
+            <input id="city">
+            <button class="searchBtn">Search</button>
+        </div>
     </section>
     <!-- Second Section for currency exchange display-->
+    <h1 id="currencyexchange"></h1>
     <section>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita omnis, voluptatibus, nemo optio iusto vero nisi officiis tenetur sequi quia eum ad pariatur dignissimos. Ipsam consequatur dolor provident minus beatae?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita omnis, voluptatibus, nemo optio iusto vero
+        nisi officiis tenetur sequi quia eum ad pariatur dignissimos. Ipsam consequatur dolor provident minus beatae?
     </section>
 
     <!-- Third Section for Weather Display-->
     <section>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut voluptatum fugit perferendis. Possimus quod eum repellendus enim blanditiis placeat numquam laboriosam sint nisi ad, pariatur hic, commodi id assumenda.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut voluptatum fugit perferendis. Possimus
+        quod eum repellendus enim blanditiis placeat numquam laboriosam sint nisi ad, pariatur hic, commodi id
+        assumenda.
     </section>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="./assets/js/script.js"></script>    
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
