added color and placeholder text

--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Snowbird Exchange - Escape south from Canada</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     
 </head>
 <body>
     <header class="has-background-info-dark">
         <h1 class="has-text-centered title is-1 has-text-success-light">The Snowbird Exchange:</h1>
-        <h2 class="has-text-centered subtitle is-2 has-text-success-light">Plan Your Winter Getaway Today</h2>
+        <h2 class="has-text-centered subtitle is-3 has-text-success-light">Plan Your Winter Getaway Today</h2>
     </header>
 
     <!-- First section for holding the search bar-->
-    <section>
+    <section class="has-background-light">
    <!--This is the search bar-->
-    <div class="ui-widget">
-        <label for="city">City you would like to Visit: </label>
-        <input id="city">
+    <div class="ui-widget py-6">
+        <label for="city">Where Would You Like to Go?: </label>
+        <input id="city" placeholder="Enter City Here!">
         <button class="searchBtn">Search</button>
-      </div>
+    </div>
     </section>
     <!-- Second Section for currency exchange display-->
     <section>
