--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
     </div>
     </section>
     <!-- Second Section for currency exchange display-->
-    <section>
+    <section class="my-6">
         <h1 id="currencyexchange"></h1>
     </section>
-    <!-- Third Section for Weather Display-->
-    <section>
+    <!-- Third Section for Current Weather Display-->
+    <section class="my-6">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut voluptatum fugit perferendis. Possimus
         quod eum repellendus enim blanditiis placeat numquam laboriosam sint nisi ad, pariatur hic, commodi id
         assumenda.
+    </section>
+    <!-- Fourth Section for 5 day forecast -->
+    <section class="columns my-6">
+        <div class="column">First column</div>
+        <div class="column">Second column</div>
+        <div class="column">Third column</div>
+        <div class="column">Fourth column</div>
+        <div class="column">Fifth column</div>
     </section>
 
 
