minor html changes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
     </section>
     <!-- Third Section for Current Weather Display-->
     <section class="my-6">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut voluptatum fugit perferendis. Possimus
-        quod eum repellendus enim blanditiis placeat numquam laboriosam sint nisi ad, pariatur hic, commodi id
-        assumenda.
+        This is where the current weather will go
     </section>
     <!-- Fourth Section for 5 day forecast -->
     <section class="columns my-6">
