Adding ids to sections for weather api

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
         <h1 id="currencyexchange"></h1>
     </section>
     <!-- Third Section for Current Weather Display-->
-    <section class="my-6">
+    <section id="currentWeather" class="my-6">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae aut voluptatum fugit perferendis. Possimus
         quod eum repellendus enim blanditiis placeat numquam laboriosam sint nisi ad, pariatur hic, commodi id
         assumenda.
     </section>
     <!-- Fourth Section for 5 day forecast -->
-    <section class="columns my-6 currentW">
-        <div class="column day1Weather">First column</div>
-        <div class="column day2Weather">Second column</div>
-        <div class="column day3">Third column</div>
-        <div class="column">Fourth column</div>
-        <div class="column">Fifth column</div>
+    <section  class="columns my-6">
+        <div id="day1Weather" class="column day1Weather">First column</div>
+        <div id="day2Weather" class="column day2Weather">Second column</div>
+        <div id="day3Weather" class="column day3">Third column</div>
+        <div id="day4Weather" class="column">Fourth column</div>
+        <div id="day5Weather" class="column">Fifth column</div>
     </section>
 
 
