displaying current weather

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     </section>
     <!-- Third Section for Current Weather Display-->
     <section id="currentWeather" class="my-6">
-        This is where the current weather will go
+        <h2 class="d-inline" id="city-name"></h2><img id="weather-icon" src="" alt="">
+            <h4 id="temp"></h4>
+            <h4 id="wind"></h4>
+            <h4 id="humidity"></h4>
+            <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
     </section>
     <!-- Fourth Section for 5 day forecast -->
     <section  class="columns my-6">
