five day forecast now displaying

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
     </section>
     <!-- Fourth Section for 5 day forecast -->
-    <section  class="columns my-6">
-        <div id="day1Weather" class="column day1Weather">First column</div>
+    <section  class="columns my-6" id="fiveDayForecast">
+        <!-- <div id="day1Weather" class="column day1Weather">First column</div>
         <div id="day2Weather" class="column day2Weather">Second column</div>
         <div id="day3Weather" class="column day3">Third column</div>
         <div id="day4Weather" class="column">Fourth column</div>
-        <div id="day5Weather" class="column">Fifth column</div>
+        <div id="day5Weather" class="column">Fifth column</div> -->
     </section>
 
 
