--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 </head>
 
 <body>
-    <header class="has-background-info-dark">
-        <h1 class="has-text-centered title is-1 has-text-success-light">The Snowbird Exchange:</h1>
-        <h2 class="has-text-centered subtitle is-3 has-text-success-light">Plan Your Winter Getaway Today</h2>
+    <header class="hero is-info">
+        <div class="hero-body">
+            <p class="title">
+              The Snowbird Exchange
+            </p>
+            <p class="subtitle">
+              Plan Your Getaway Today
+            </p>
+          </div>
     </header>
 
     <!-- First section for holding the search bar-->
