added function for search history

--- a/index.html
+++ b/index.html
@@ -16,22 +16,26 @@
     <header class="hero is-info">
         <div class="hero-body">
             <p class="title">
-              The Snowbird Exchange
+                The Snowbird Exchange
             </p>
             <p class="subtitle">
-              Plan Your Getaway Today
+                Plan Your Getaway Today
             </p>
-          </div>
+        </div>
     </header>
 
     <!-- First section for holding the search bar-->
     <section class="has-background-light">
-   <!--This is the search bar-->
-    <div class="ui-widget py-6">
-        <label for="city">Where Would You Like to Go?: </label>
-        <input id="city" placeholder="Enter City Here!">
-        <button class="searchBtn">Search</button>
-    </div>
+        <!--This is the search bar-->
+        <div class="ui-widget py-6">
+            <label for="city">Where Would You Like to Go?: </label>
+            <input id="city" placeholder="Enter City Here!">
+            <button class="searchBtn">Search</button>
+            <br>
+            <div id="search-history">
+
+            </div>
+        </div>
     </section>
     <!-- Second Section for currency exchange display-->
     <section class="my-6">
@@ -40,13 +44,13 @@
     <!-- Third Section for Current Weather Display-->
     <section id="currentWeather" class="my-6">
         <h2 class="d-inline" id="city-name"></h2><img id="weather-icon" src="" alt="">
-            <h4 id="temp"></h4>
-            <h4 id="wind"></h4>
-            <h4 id="humidity"></h4>
-            <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
+        <h4 id="temp"></h4>
+        <h4 id="wind"></h4>
+        <h4 id="humidity"></h4>
+        <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
     </section>
     <!-- Fourth Section for 5 day forecast -->
-    <section  class="columns my-6" id="fiveDayForecast">
+    <section class="columns my-6" id="fiveDayForecast">
         <!-- <div id="day1Weather" class="column day1Weather">First column</div>
         <div id="day2Weather" class="column day2Weather">Second column</div>
         <div id="day3Weather" class="column day3">Third column</div>
