added image to search area

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     </header>
 
     <!-- First section for holding the search bar-->
-    <section class="has-background-light">
+    <section class="hero is-medium">
    <!--This is the search bar-->
-    <div class="ui-widget py-6">
-        <label for="city">Where Would You Like to Go?: </label>
-        <input id="city" placeholder="Enter City Here!">
-        <button class="searchBtn">Search</button>
-    </div>
+        <div class="hero-body departures">
+            <div class="ui-widget">
+                <label for="city">Where Would You Like to Go?: </label>
+                <br>
+                <input id="city" placeholder="Enter City Here!">
+                <button class="searchBtn">Search</button>
+            </div>
+        </div>
     </section>
     <!-- Second Section for currency exchange display-->
     <section class="my-6">
