testing image displays

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- First section for holding the search bar-->
     <section class="hero is-medium">
         <!--This is the search bar-->
-        <div class="hero-body departures">
+        <div class="hero-body departures-image">
                 <div class="ui-widget">
                     <label for="city">Where Would You Like to Go?: </label>
                 <br>
@@ -53,7 +53,7 @@
         <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
     </section>
     <!-- Fourth Section for 5 day forecast -->
-    <section class="columns my-6" id="fiveDayForecast">
+    <section class="columns cancun-image five-day-display" id="fiveDayForecast">
         <!-- <div id="day1Weather" class="column day1Weather">First column</div>
         <div id="day2Weather" class="column day2Weather">Second column</div>
         <div id="day3Weather" class="column day3">Third column</div>
