--- a/index.html
+++ b/index.html
@@ -41,24 +41,13 @@
         </div>
     </section>
     <!-- Second Section for currency exchange display-->
-    <section class="my-6">
-        <h1 id="currencyexchange"></h1>
-    </section>
-    <!-- Third Section for Current Weather Display-->
-    <section id="currentWeather" class="my-6">
-        <h2 class="d-inline" id="city-name"></h2><img id="weather-icon" src="" alt="">
-        <h4 id="temp"></h4>
-        <h4 id="wind"></h4>
-        <h4 id="humidity"></h4>
-        <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
-    </section>
+  
     <!-- Fourth Section for 5 day forecast -->
-    <section class="columns cancun-image five-day-display" id="fiveDayForecast">
-        <!-- <div id="day1Weather" class="column day1Weather">First column</div>
-        <div id="day2Weather" class="column day2Weather">Second column</div>
-        <div id="day3Weather" class="column day3">Third column</div>
-        <div id="day4Weather" class="column">Fourth column</div>
-        <div id="day5Weather" class="column">Fifth column</div> -->
+    <section id="location-picture-display" >
+        <h1 id="currencyexchange"></h1>
+        <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
+        <div class="columns" id="fiveDayForecast">
+        </div>
     </section>
 
 
