--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Second Section for currency exchange display-->
   
     <!-- Fourth Section for 5 day forecast -->
-    <section id="location-picture-display" >
+    <section class="five-day-display" id="location-picture-display" >
         <h1 id="currencyexchange"></h1>
         <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
         <div class="columns" id="fiveDayForecast">
