added Language options

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
     <header class="hero is-info">
+        <div class="language">
+            <button class="englishBtn">English</button>
+            <button class="frenchBtn">French</button>
+        </div>
         <div class="hero-body">
             <p class="title">
                 The Snowbird Exchange
@@ -22,6 +26,7 @@
                 Plan Your Getaway Today
             </p>
         </div>
+      
     </header>
 
     <!-- First section for holding the search bar-->
