added title for search history

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Plan Your Getaway Today
             </p>
         </div>
-      
+
     </header>
 
     <!-- First section for holding the search bar-->
@@ -40,6 +40,8 @@
                 <button class="searchBtn">Search</button>
                 <button id="clear-history">Clear History</button>
                 <br>
+                <br>
+                <h5>Search History</h5>
                 <div id="search-history">
 
                 </div>
