replaced flag icon in current exchange API

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 
     <!-- Fourth Section for 5 day forecast -->
     <section class="five-day-display" id="location-picture-display">
-        <h1 id="currencyexchange"></h1>
+        <div>
+            <h1 id="currencyexchange"></h1>
+        </div>
         <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
         <div class="columns" id="fiveDayForecast">
         </div>
