Changed language buttons to a modal

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 
 <body>
     <header class="hero is-info">
-        <div class="language">
-            <button class="englishBtn">English</button>
-            <button class="frenchBtn">French</button>
-        </div>
+        <div id="dialog-confirm" title="Language Selection">
+            <p><span class="ui-icon ui-icon-alert" style="float:center; margin:12px 12px 20px 0;"></span>Please select your preferred language:</p>
+          </div>
         <div class="hero-body">
             <p class="title">
                 The Snowbird Exchange
