--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Fourth Section for 5 day forecast -->
     <section class="five-day-display" id="location-picture-display">
         <div>
-            <h1 id="currencyexchange"></h1>
+            <h1 class="currency-display is-size-2" id="currencyexchange"></h1>
         </div>
         <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
         <div class="columns" id="fiveDayForecast">
