--- a/french.html
+++ b/french.html
@@ -27,13 +27,11 @@
     </header>
 <section>
     <div id="dialog-message" title="Not available">
-        <p>
+       
           <span class="ui-icon ui-icon-circle-check" style="float:top; margin:0 7px 50px 0;"></span>
           We're sorry but the French site is currently unavailable. 
-        </p>
-        <p>
-          <b>Redirecting you to our English Site.</b>.
-        </p>
+          Redirecting you to our English Site.
+        
       </div>
 <img src="./assets/images/coming-soon.jpg" class="comingSoon">
 </section>
