--- a/index.html
+++ b/index.html
@@ -13,53 +13,24 @@
 </head>
 
 <body>
-    <header class="hero header">
+    <header class="hero is-info">
+        <div id="dialog-confirm" title="Language Selection">
+            <p><span class="ui-icon ui-icon-alert" style="float:center; margin:12px 12px 20px 0;"></span>Please select your preferred language:</p>
+          </div>
         <div class="hero-body">
-            <p class="title has-text-white">
+            <p class="title">
                 The Snowbird Exchange
             </p>
-            <p class="subtitle has-text-white">
+            <p class="subtitle">
                 Plan Your Getaway Today
             </p>
         </div>
 
     </header>
 
-    <!-- First section for holding the search bar-->
-    <section class="hero is-medium">
-        <!--This is the search bar-->
-        <div class="hero-body departures-image">
-            <div class="ui-widget">
-                <label for="city">Where Would You Like to Go?: </label>
-                <br>
-                <input id="city" placeholder="Enter City Here!">
-                <button class="searchBtn">Search</button>
-                <button id="clear-history">Clear History</button>
-                <br>
-                <br>
-                <h5>Search History</h5>
-                <div id="search-history">
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Second Section for currency exchange display-->
-
-    <!-- Fourth Section for 5 day forecast -->
-    <section class="five-day-display" id="location-picture-display">
-        <div>
-            <h1 class="" id="currencyexchange"></h1>
-        </div>
-        <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
-        <div class="columns" id="fiveDayForecast">
-        </div>
-    </section>
-
-
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/launch.js"></script>
 </body>
 
 </html>
