added colour box around search

--- a/english.html
+++ b/english.html
@@ -29,15 +29,15 @@
     <section class="hero is-medium">
         <!--This is the search bar-->
         <div class="hero-body departures-image">
-            <div class="ui-widget">
-                <label for="city">Where Would You Like to Go?: </label>
+            <div class="ui-widget search-div">
+                <label class="search-text is-size-4" for="city">Where Would You Like to Go?: </label>
                 <br>
                 <input id="city" placeholder="Enter City Here!">
                 <button class="searchBtn">Search</button>
                 <button id="clear-history">Clear History</button>
                 <br>
                 <br>
-                <h5>Search History</h5>
+                <h5 class="is-size-4">Search History</h5>
                 <div id="search-history">
 
                 </div>
