Added english french buttons

--- a/english.html
+++ b/english.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
+   
     <header class="hero header">
+        <div class="language">
+            <button class="englishBtn language">English</button>
+            <button class="frenchBtn language">French</button>
+        </div>
         <div class="hero-body">
             <p class="title has-text-white">
                 The Snowbird Exchange
