--- a/french.html
+++ b/french.html
@@ -14,7 +14,10 @@
 
 <body>
     <header class="hero is-info">
-       
+        <div>
+            <button class="englishBtn language">English</button>
+            <button class="frenchBtn language">French</button>
+        </div>
         <div class="hero-body">
             <p class="title">
                 The Snowbird Exchange
