--- a/english.html
+++ b/english.html
@@ -15,7 +15,7 @@
 <body>
    
     <header class="hero header">
-        <div class="language">
+        <div class="language is-flex is-justify-content-flex-end">
             <button class="englishBtn language">English</button>
             <button class="frenchBtn language">French</button>
         </div>
