--- a/french.html
+++ b/french.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="hero is-info">
-        <div>
+        <div class="is-flex is-justify-content-flex-end">
             <button class="englishBtn language">English</button>
             <button class="frenchBtn language">French</button>
         </div>
