minor positioning change of forecast heading

--- a/english.html
+++ b/english.html
@@ -56,7 +56,7 @@
         <div>
             <h1 class="" id="currencyexchange"></h1>
         </div>
-        <h3 class="pt-5 pb-3" id="five-day-heading"></h3>
+        <h3 class="pt-5 pb-3 is-size-4 has-text-white" id="five-day-heading"></h3>
         <div class="columns" id="fiveDayForecast">
         </div>
     </section>
