added initial background image to english.html

--- a/english.html
+++ b/english.html
@@ -52,7 +52,7 @@
     <!-- Second Section for currency exchange display-->
 
     <!-- Fourth Section for 5 day forecast -->
-    <section class="five-day-display" id="location-picture-display">
+    <section class="five-day-display initial-background-image" id="location-picture-display">
         <div>
             <h1 class="" id="currencyexchange"></h1>
         </div>
