--- a/index.html
+++ b/index.html
@@ -13,24 +13,58 @@
 </head>
 
 <body>
-    <header class="hero is-info">
-        <div id="dialog-confirm" title="Language Selection">
-            <p><span class="ui-icon ui-icon-alert" style="float:center; margin:12px 12px 20px 0;"></span>Please select your preferred language:</p>
-          </div>
+   
+    <header class="hero header">
+        <div class="language is-flex is-justify-content-flex-end">
+            <button class="englishBtn language">English</button>
+            <button class="frenchBtn language">French</button>
+        </div>
         <div class="hero-body">
-            <p class="title">
+            <p class="title has-text-white">
                 The Snowbird Exchange
             </p>
-            <p class="subtitle">
+            <p class="subtitle has-text-white">
                 Plan Your Getaway Today
             </p>
         </div>
 
     </header>
 
+    <!-- First section for holding the search bar-->
+    <section class="hero is-medium">
+        <!--This is the search bar-->
+        <div class="hero-body departures-image">
+            <div class="ui-widget search-div">
+                <label class="search-text is-size-4" for="city">Where Would You Like to Go?: </label>
+                <br>
+                <input id="city" placeholder="Enter City Here!">
+                <button class="searchBtn">Search</button>
+                <button id="clear-history">Clear History</button>
+                <br>
+                <br>
+                <h5 class="is-size-4">Search History</h5>
+                <div id="search-history">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Second Section for currency exchange display-->
+
+    <!-- Fourth Section for 5 day forecast -->
+    <section class="five-day-display initial-background-image" id="location-picture-display">
+        <div>
+            <h1 class="" id="currencyexchange"></h1>
+        </div>
+        <h3 class="pt-5 pb-3 is-size-4 has-text-white" id="five-day-heading"></h3>
+        <div class="columns" id="fiveDayForecast">
+        </div>
+    </section>
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="./assets/js/launch.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
