removed french page

--- a/french.html
+++ b/french.html
@@ -29,13 +29,13 @@
 
     </header>
 <section>
-    <div id="dialog-message" title="Not available">
+    <div id="dialog-message" title="Not available" text="We're sorry but hte French site is currently Unavailable.">
        
           <span class="ui-icon ui-icon-circle-check" style="float:top; margin:0 7px 50px 0;"></span>
           We're sorry but the French site is currently unavailable. 
           Redirecting you to our English Site.
         
-      </div>
+          We're sorry but hte French site is currently Unavailable.  </div>
 <img src="./assets/images/coming-soon.jpg" class="comingSoon">
 </section>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
