--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="hero header">
         <div class="language is-flex is-justify-content-flex-end">
             <button class="englishBtn language">English</button>
-            <button class="frenchBtn language ">French</button>
+            <button class="frenchBtn language " id="opener">French</button>
         </div>
         <div class="hero-body">
             <p class="title has-text-white">
@@ -32,7 +32,9 @@
 
     <!-- First section for holding the search bar-->
     <section class="hero is-medium">
-       
+        <div id="dialog" title="Unavailable">
+            <p>French site currently unavailable, Please check back later!</p>
+          </div>
         <!--This is the search bar-->
         <div class="hero-body departures-image">
             <div class="ui-widget search-div">
